force-app/main/default/objects/CleanEnergyListSet__c/CleanEnergyListSet__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>To establish connection to Clean Energy via EAI</description>
    <label>CleanEnergyListSetting</label>
</CustomObject>