force-app/main/default/objects/CleanEnergyListSet__c/fields/endpoint__c.field-meta.xml
<CustomField>
    <fullName>endpoint__c</fullName>
    <description>Clean energy end point</description>
    <label>endpoint</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>