force-app/main/default/objects/CleanEnergyListSet__c/fields/username__c.field-meta.xml
<CustomField>
    <fullName>username__c</fullName>
    <description>Clean Energy api auth username</description>
    <label>username</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>